--- a/FolderHTML/FolderHTML.csproj
+++ b/FolderHTML/FolderHTML.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crc32Algorithm.cs" />
+    <Compile Include="Crc32CAlgorithm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeProxy.cs" />
+    <Compile Include="SafeProxyC.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
